force-app/main/default/objects/HRM_Requirement__c/HRM_Requirement__c.object-meta.xml
<CustomObject>
    <label>HRM Requirement</label>
    <nameField>
        <displayFormat>HRM-R-{000000}</displayFormat>
        <label>HRM Requirement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HRM Requirement</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>