force-app/main/default/objects/HRM_Requirement__c/fields/Assumptions__c.field-meta.xml
<CustomField>
    <fullName>Assumptions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assumptions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>