force-app/main/default/objects/HRM_Requirement__c/fields/HRM_Configuration_Document__c.field-meta.xml
<CustomField>
    <fullName>HRM_Configuration_Document__c</fullName>
    <description>Link to NI Documentation object</description>
    <label>HRM Configuration Document</label>
    <referenceTo>NI_Documentation__c</referenceTo>
    <relationshipLabel>HRM Requirements</relationshipLabel>
    <relationshipName>HRM_Requirement</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>