force-app/main/default/objects/HRM_Requirement__c/fields/Out_of_Scope__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Scope__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Is there anything in this task that should be called out as &quot;Out of Scope&quot; (i.e. creating HTML for an email template, etc)</inlineHelpText>
    <label>Out of Scope</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>