force-app/main/default/objects/HRM_Requirement__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Purpose</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>